CHANGES
=======

* mods to qcm_api to work with el65/py26, el7/py27
* added response and sqcbase modules, tested on el7
* Initial commit