@@ -1,6 +1,17 @@
 #!/usr/bin/env python
 
-import sqcbase
-log = sqcbase.logInit()
-log.warn('warning message')
-log.error('error message')
+from driver import sqcdriver
+from optparse import OptionParser
+
+if __name__ == "__main__":
+
+    opt = OptionParser()
+    opt.add_option ("-c", "--config", help="path to configuration file",
+            action="store", type="string", dest="conf" )
+
+    (options, args) = opt.parse_args()
+
+    driver = sqcdriver.sqc_driver(options)
+    driver.run()
+
+
