@@ -10,8 +10,12 @@ epel_release:
   "5": 4
   "6": 8
   "65": 8
+  "67": 8
   "7": 6
 
 epel_repo_url: "http://download.fedoraproject.org/pub/epel/{{ ansible_distribution_major_version }}/{{ ansible_userspace_architecture }}{{ '/' if ansible_distribution_major_version < '7' else '/e/' }}epel-release-{{ ansible_distribution_major_version }}-{{ epel_release[ansible_distribution_major_version] }}.noarch.rpm"
 epel_repo_gpg_key_path: "/etc/pki/rpm-gpg/RPM-GPG-KEY-EPEL-{{ ansible_distribution_major_version }}"
-
+instantclient_oracle_packages:
+  - { filename: '/files/oracle-instantclient12.1-basic-12.1.0.2.0-1.x86_64.rpm' }
+  - { filename: '/files/oracle-instantclient12.1-sqlplus-12.1.0.2.0-1.x86_64.rpm' }
+  - { filename: '/files/oracle-instantclient12.1-devel-12.1.0.2.0-1.x86_64.rpm' }
