@@ -1,0 +1,13 @@
+[db]
+tns_env: /files
+app: /@myserv
+
+[sftp]
+file_prefix: scsqc_extr
+file_suffix: csv
+dir_local: ./
+dir_remote: something 
+
+[qcm]
+and: this
+
